--- a/millbrid/v2/03-comming-soon/css/styles.css
+++ b/millbrid/v2/03-comming-soon/css/styles.css
@@ -27,7 +27,7 @@ a b.light-color:hover{ text-decoration: none; color: #E45F74; }
 b{ font-weight: 500;}
 .title {font-size: 35px;}
 
-img{ width: 400px; margin: 5% 0 40px 0;}
+img{ width: 400px; margin: 4% 0 40px 0;}
 @media only screen and (max-width: 600px) {
 			img {width: 300px; margin: 40% 0 50px 0;}
 			.title {font-size: 30px;}
@@ -88,7 +88,7 @@ opacity: .4; background: #000; }
 .main-area .desc{ margin: 20px auto; max-width: 500px; }
 
 .main-area .notify-btn{ padding: 13px 35px; border-radius: 50px; border: 2px solid #ae0002;
-	color: #fff; background: #ae0002; }
+	color: #fff; background: #ae0002; margin-top: 5px;}
 
 	.main-area .notify-btn:hover{ background: none; }
 
