--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,5 +135,5 @@ strong {
             width: 100%;
             height: 100%;
             z-index: 9999;
-            background: url('../img/loader.gif') 50% 50% no-repeat rgb(249,249,249);
+            background: url('../img/loader.gif') 50% 50% no-repeat #eeeff4;
         }
