--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,11 +129,14 @@ strong {
 }
 
 .loader {
-            position: fixed;
             left: 0px;
             top: 0px;
             width: 100%;
             height: 100%;
             z-index: 9999;
-            background: url('../img/loader.gif') 50% 50% no-repeat #eeeff4;
+            background: url('../img/loader.gif') #eeeff4;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+
         }
