--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,8 +129,9 @@ strong {
 }
 
 .loader {
-            left: 0px;
-            top: 0px;
+                display:block;
+    margin: 0 auto;
+    position: relative;
             width: 100%;
             height: 100%;
             z-index: 9999;
