--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,16 +128,31 @@ strong {
     border-radius: 3px;
 }
 
-.loader {
-                display:block;
-    margin: 0 auto;
-    position: relative;
-            width: 100%;
-            height: 100%;
-            z-index: 9999;
-            background: url('../img/loader.gif') #eeeff4;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center;
-
-        }
+/** Body Overlay **/
+body #load {
+    display: block;
+    height: 100%;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9901;
+    opacity: 1;
+    background-color: #FFFFFF;
+    visibility: visible;
+    -webkit-transition: all .35s ease-out;
+    transition: all .35s ease-out;
+}
+body #load.loader-removed {
+    opacity: 0;
+    visibility: hidden;
+}
+.spinner-loader .load-wrap {
+    background-image: url("images/loader.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
